# UltimateCoders

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  docker-compose.dev.yml  docker-compose.yml  index.html  pyproject.toml  run-cluster.sh  run-gateway.sh  run-omp.sh  script.js  test-all.sh  uc.repos.yaml.example
.codegraph/: daemon.pid
.github/workflows/: ci-dashboard.yml  ci-python.yml  ci-rust.yml  ci-tui.yml  ci-typescript.yml
.playwright-mcp/: page-2026-06-21T08-51-46-259Z.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: agent-capability-spec.md  codegraph-integration.md  cross-repo-search-spec.md  dashboard-spec.md  database-guidelines.md  directory-structure.md  error-handling.md  event-pipeline-spec.md  index.md  local-worker-bridge-spec.md  logging-guidelines.md  nats-bridge-spec.md  omp-rpc-server-spec.md  omp-tools-spec.md  quality-guidelines.md  scheduler-spec.md  taskservice-grpc-spec.md  worker-service-spec.md  workspace-config-spec.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  tui-grpc-spec.md  type-safety.md
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-09-distributed-ai-coding/: check.jsonl  prd.md  task.json
.trellis/tasks/06-11-sandbox/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-11-task-scheduling/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-14-sandbox-claude-code/: prd.md  task.json
.trellis/tasks/06-15-dashboard/: check.jsonl  task.json
.trellis/tasks/06-15-tui-unit-tests/: prd.md
.trellis/tasks/06-16-backend-engine-api-fixes/: implement.jsonl  task.json
.trellis/tasks/06-16-grpc-orchestrator-bridge/: check.jsonl  task.json
.trellis/tasks/06-16-statusbar-cleanup/: implement.jsonl  prd.md  task.json
.trellis/tasks/06-16-tui-end-to-end-task-execution-local-execution-path-without-nats/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/06-16-tui-layout-v2/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-16-tui-layout-v3/: prd.md  task.json
.uc/tasks/: uc-1-mqtbjgwd.json  uc-2-mqtccg07.json  uc-3-mqtes80t.json
crates/uc-engine/: Cargo.toml
crates/uc-engine/src/: checkpoint.rs  circuit_breaker.rs  config.rs  events.rs  git.rs  lib.rs  local.rs  metadata.rs  rate_limiter.rs  repos_config.rs  scheduler.rs  task_store.rs
crates/uc-engine/src/conflict/: merger.rs  mod.rs
crates/uc-engine/src/git/: repo_manager.rs
crates/uc-engine/src/indexer/: ast.rs  mod.rs  semantic.rs  text.rs
crates/uc-engine/src/memory/: long_term.rs  mod.rs  short_term.rs
crates/uc-engine/src/metadata/: postgres.rs
crates/uc-engine/src/sandbox/: docker.rs  file_tracker.rs  mod.rs  pool.rs  subprocess.rs
crates/uc-engine/src/sandbox/agents/: claude_code.rs  codex.rs  grok.rs  mod.rs
crates/uc-engine/src/scheduler/: dependency.rs  dispatcher.rs  migration.rs  mod.rs  night_window.rs  orchestrator.rs  service.rs  store.rs
crates/uc-engine/src/search/: hybrid.rs  mod.rs  semantic.rs
crates/uc-engine/src/task_store/: legacy.rs  mod.rs
crates/uc-engine/tests/: storage_integration.rs
crates/uc-grpc/: Cargo.toml  build.rs
crates/uc-grpc-server/: Cargo.toml
crates/uc-grpc-server/src/: main.rs
crates/uc-grpc/proto/: engine.proto
crates/uc-grpc/src/: auth.rs  client.rs  conversions.rs  dashboard_service.rs  lib.rs  local_worker.rs  server.rs  server_replacer.py  worker_service.rs
crates/uc-grpc/tests/: grpc_integration.rs  local_worker_bridge_integration.rs  local_worker_integration.rs
crates/uc-python/: Cargo.toml
crates/uc-python/src/: async_support.rs  engine.rs  lib.rs  scheduler.rs  types.rs
crates/uc-types/: Cargo.toml
dashboard/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docker/: .env.example  Dockerfile  Dockerfile.grpc  docker-compose.dev.yml  docker-compose.gateway.yml  docker-compose.override.example.yml  docker-compose.yml  nats.conf  scheduled_tasks.example.yaml  tikv.toml
docs/: 2026-06-10-sandbox-agent-executor-design.md  architecture.md  nats-bridge.md
python/ultimate_coders/: __init__.py  config.py  engine.py  local_worker.py  nats_worker.py  repo_config.py
sandbox/: Dockerfile  docker-bake.hcl
scripts/: dashboard-autostart.sh  omp-workspace.sh  run_dashboard.py  run_sandbox.py  run_tui.sh  test_tui_input.py
tests/python/: conftest.py  mock_worker.py  test_agent.py  test_aggregator.py  test_async_engine.py  test_codegraph.py  test_config.py  test_conflict.py  test_dashboard.py  test_dashboard_metrics.py  test_dashboard_metrics_auth.py  test_dashboard_nats_binding.py  test_dashboard_stream.py  test_distributed_conflict.py  test_llm_error_classification.py  test_lsp_mcp.py  test_memory_entry.py  test_merge_arbiter.py  test_metrics.py  test_nats_worker.py  test_nats_worker_helpers.py  test_orchestrator_result.py  test_orchestrator_sandbox.py  test_repo_config.py  test_sandbox.py  test_scheduler.py  test_scheduler_integration.py  test_search_query_validation.py  test_state_sync.py  test_step_condition.py  test_tui.py  test_worker_async_engine.py  test_worker_capabilities.py  test_workflow_orchestration.py  test_workspace.py
tui/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
tui/src/: StatusIndicator.test.ts  chatlog-utils.test.ts  cjk-input-utils.test.ts  cjk-input-utils.ts  commands.test.ts  commands.ts  filter.test.ts  formatters.test.ts  formatters.ts  index.tsx  keymap.test.ts  keymap.ts  markdown.test.ts  markdown.ts  marked-terminal.d.ts  offline-utils.test.ts  offline-utils.ts  reducer.test.ts  reducer.ts  statusbar-utils.test.ts  statusbar-utils.ts  subtasktree.test.ts  symbols.test.ts  symbols.ts  task-list-utils.test.ts  task-list-utils.ts  taskinput-utils.test.ts  taskinput-utils.ts  truncate.test.ts  truncate.ts
(+1113 files in other folders)
