[workspace]
resolver = "2"
members = [
    "crates/uc-types",
    "crates/uc-engine",
    "crates/uc-grpc",
    "crates/uc-grpc-server",
    "crates/uc-python",
]

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# PyO3 (0.25+ required for Python 3.14 support)
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }

# Storage
tikv-client = "0.3"
qdrant-client = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# NATS
async-nats = "0.38"

# Code indexing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"

# Diff / merge
imara-diff = "0.1"
git2 = { version = "0.19", default-features = false }

# Text search
regex = "1"

# Utilities
async-trait = "0.1"
futures = "0.3"
dashmap = "6"
blake3 = "1"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JameryW/UltimateCoders"
