[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ultimate-coders"
version = "0.1.0"
description = "Distributed AI Coding System with shared memory and multi-repo retrieval"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ultimate_coders._uc_core"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
