[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ultimate-coders"
version = "0.1.0"
description = "Distributed AI Coding System with shared memory and multi-repo retrieval"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "sse-starlette>=1.6.0",
    "nats-py>=2.7.0",
]

[project.optional-dependencies]
prometheus = [
    "prometheus-client>=0.20.0",
]
llm = [
    "anthropic>=0.30.0",
    "litellm>=1.0.0",
]
test = [
    "httpx>=0.24.0",
    "anthropic>=0.30.0",
    "litellm>=1.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ultimate_coders._uc_core"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring infrastructure (TiKV/Qdrant/PostgreSQL/NATS)",
]
addopts = "--cov=ultimate_coders --cov-report=term-missing --cov-fail-under=0"

[tool.coverage.run]
source = ["ultimate_coders"]
omit = [
    "ultimate_coders/_uc_core*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
