[package]
name = "uc-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uc-types = { path = "../uc-types" }
uc-engine = { path = "../uc-engine", default-features = false }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio-stream = "0.1"
