[package]
name = "uc-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_uc_core"
crate-type = ["cdylib"]

[dependencies]
uc-types = { path = "../uc-types" }
uc-engine = { path = "../uc-engine", default-features = false }
uc-grpc = { path = "../uc-grpc" }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1"
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
